--- a/app/zeitgeisttest/Makefile.am
+++ b/app/zeitgeisttest/Makefile.am
@@ -1,12 +1,12 @@
 noinst_PROGRAMS = zeitgeisttest
 
 if DEBUG
-LDADD = ${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la \
-        ${top_srcdir}/lib/salt/libsalt_debug.la 
+LDADD = ${top_builddir}/lib/zeitgeist/libzeitgeist_debug.la \
+        ${top_builddir}/lib/salt/libsalt_debug.la 
 zeitgeisttest_CXXFLAGS = -O -g -W -Wall
 else
-LDADD = ${top_srcdir}/lib/zeitgeist/libzeitgeist.la \
-        ${top_srcdir}/lib/salt/libsalt.la 
+LDADD = ${top_builddir}/lib/zeitgeist/libzeitgeist.la \
+        ${top_builddir}/lib/salt/libsalt.la 
 zeitgeisttest_CXXFLAGS = -O2
 endif
 
