--- a/app/rcssmonitor3d/kerosin/Makefile.am
+++ b/app/rcssmonitor3d/kerosin/Makefile.am
@@ -3,22 +3,22 @@ bin_PROGRAMS = rcssmonitor3D-kerosin
 
 if DEBUG
 LDADD = -lpthread \
-	${top_srcdir}/lib/spark/libspark_debug.la \
-	${top_srcdir}/lib/kerosin/libkerosin_debug.la \
-	${top_srcdir}/lib/oxygen/liboxygen_debug.la \
-	${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la \
-        ${top_srcdir}/lib/salt/libsalt_debug.la \
-	${top_srcdir}/app/rcssmonitor3d/lib/librcssmonitor3D.la \
+	${top_builddir}/lib/spark/libspark_debug.la \
+	${top_builddir}/lib/kerosin/libkerosin_debug.la \
+	${top_builddir}/lib/oxygen/liboxygen_debug.la \
+	${top_builddir}/lib/zeitgeist/libzeitgeist_debug.la \
+        ${top_builddir}/lib/salt/libsalt_debug.la \
+	${top_builddir}/app/rcssmonitor3d/lib/librcssmonitor3D.la \
 	@BOOST_THREADS_LIB@
 rcssmonitor3D_kerosin_CXXFLAGS = -O -g -W -Wall
 else
 LDADD = -lpthread \
-	${top_srcdir}/lib/spark/libspark.la \
-	${top_srcdir}/lib/kerosin/libkerosin.la \
-	${top_srcdir}/lib/oxygen/liboxygen.la \
-	${top_srcdir}/lib/zeitgeist/libzeitgeist.la \
-        ${top_srcdir}/lib/salt/libsalt.la \
-	${top_srcdir}/app/rcssmonitor3d/lib/librcssmonitor3D.la \
+	${top_builddir}/lib/spark/libspark.la \
+	${top_builddir}/lib/kerosin/libkerosin.la \
+	${top_builddir}/lib/oxygen/liboxygen.la \
+	${top_builddir}/lib/zeitgeist/libzeitgeist.la \
+        ${top_builddir}/lib/salt/libsalt.la \
+	${top_builddir}/app/rcssmonitor3d/lib/librcssmonitor3D.la \
 	@BOOST_THREADS_LIB@
 rcssmonitor3D_kerosin_CXXFLAGS = -O2
 endif
