--- a/app/rcssmonitor3d/lite/Makefile.am
+++ b/app/rcssmonitor3d/lite/Makefile.am
@@ -2,17 +2,17 @@ bin_PROGRAMS = rcssmonitor3D-lite
 
 if DEBUG
 LDADD = -lpthread  \
-	${top_srcdir}/lib/oxygen/liboxygen_debug.la \
-	${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la \
-        ${top_srcdir}/lib/salt/libsalt_debug.la \
-	${top_srcdir}/app/rcssmonitor3d/lib/librcssmonitor3D.la @SDL_LIBADD@ @IL_LIBADD@ @GL_LIBADD@ @BOOST_THREADS_LIB@
+	${top_builddir}/lib/oxygen/liboxygen_debug.la \
+	${top_builddir}/lib/zeitgeist/libzeitgeist_debug.la \
+        ${top_builddir}/lib/salt/libsalt_debug.la \
+	${top_builddir}/app/rcssmonitor3d/lib/librcssmonitor3D.la @SDL_LIBADD@ @IL_LIBADD@ @GL_LIBADD@ @BOOST_THREADS_LIB@
 rcssmonitor3D_lite_CXXFLAGS = -O -g -W -Wall
 else
 LDADD = -lpthread  \
-	${top_srcdir}/lib/oxygen/liboxygen.la \
-	${top_srcdir}/lib/zeitgeist/libzeitgeist.la \
-        ${top_srcdir}/lib/salt/libsalt.la \
-	${top_srcdir}/app/rcssmonitor3d/lib/librcssmonitor3D.la @SDL_LIBADD@ @IL_LIBADD@ @GL_LIBADD@ @BOOST_THREADS_LIB@
+	${top_builddir}/lib/oxygen/liboxygen.la \
+	${top_builddir}/lib/zeitgeist/libzeitgeist.la \
+        ${top_builddir}/lib/salt/libsalt.la \
+	${top_builddir}/app/rcssmonitor3d/lib/librcssmonitor3D.la @SDL_LIBADD@ @IL_LIBADD@ @GL_LIBADD@ @BOOST_THREADS_LIB@
 rcssmonitor3D_lite_CXXFLAGS = -O2
 endif
 
