--- a/app/simspark/Makefile.am
+++ b/app/simspark/Makefile.am
@@ -4,20 +4,20 @@ endif
 
 if DEBUG
 LDADD = -lpthread  \
-	${top_srcdir}/lib/spark/libspark_debug.la \
-	${top_srcdir}/lib/kerosin/libkerosin_debug.la \
-	${top_srcdir}/lib/oxygen/liboxygen_debug.la \
-	${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la \
-        ${top_srcdir}/lib/salt/libsalt_debug.la \
+	${top_builddir}/lib/spark/libspark_debug.la \
+	${top_builddir}/lib/kerosin/libkerosin_debug.la \
+	${top_builddir}/lib/oxygen/liboxygen_debug.la \
+	${top_builddir}/lib/zeitgeist/libzeitgeist_debug.la \
+        ${top_builddir}/lib/salt/libsalt_debug.la \
 	@BOOST_THREADS_LIB@
 simspark_CXXFLAGS = -O -g -W -Wall
 else
 LDADD = -lpthread  \
-	${top_srcdir}/lib/spark/libspark.la \
-	${top_srcdir}/lib/kerosin/libkerosin.la \
-	${top_srcdir}/lib/oxygen/liboxygen.la \
-	${top_srcdir}/lib/zeitgeist/libzeitgeist.la \
-        ${top_srcdir}/lib/salt/libsalt.la \
+	${top_builddir}/lib/spark/libspark.la \
+	${top_builddir}/lib/kerosin/libkerosin.la \
+	${top_builddir}/lib/oxygen/liboxygen.la \
+	${top_builddir}/lib/zeitgeist/libzeitgeist.la \
+        ${top_builddir}/lib/salt/libsalt.la \
 	@BOOST_THREADS_LIB@
 simspark_CXXFLAGS = -O2
 endif
@@ -67,12 +67,14 @@ dist_pkgdata_DATA = \
 	bindings.rb \
 	materials.rb \
 	materials-textures.rb \
-	soccersim.rb 
+	soccersim.rb \
+	internalsoccermonitor.rb
 
-install-data-local: $(srcdir)/rsg/agent/ball.rsg
+install-data-local: $(top_builddir)/$(subdir)/rsg/agent/ball.rsg
 	rm -rf $(DESTDIR)$(pkgdatadir)/rsg
 	mkdir -p $(DESTDIR)$(pkgdatadir)/
 	cp -r $(srcdir)/rsg $(DESTDIR)$(pkgdatadir)/
+	cp -r $(top_builddir)/$(subdir)/rsg $(DESTDIR)$(pkgdatadir)/
 	chmod -R a+rX $(DESTDIR)$(pkgdatadir)/rsg
 
 EXTRA_DIST = \
