- removed soccerbot.rsg - added soccerbot055.rsg and soccerbot056.rsg - included flag_left1/2.rsg and flag_right1/2.rsg for distribution

--- a/app/simspark/Makefile.am
+++ b/app/simspark/Makefile.am
@@ -82,13 +82,18 @@ EXTRA_DIST = \
 	rsg/agent/soccerplayer.rsg \
 	rsg/agent/leggedsphere.rsg \
 	rsg/agent/hoap2.rsg \
-	rsg/agent/soccerbot.rsg \
+	rsg/agent/soccerbot055.rsg \
+	rsg/agent/soccerbot056.rsg \
 	rsg/agent/soccerbottorso.rsg \
 	rsg/agent/soccer.rsg \
 	rsg/agent/flag.rsg \
 	rsg/agent/flag_no_viz.rsg \
 	rsg/agent/flag_left.rsg \
+	rsg/agent/flag_left1.rsg \
+	rsg/agent/flag_left2.rsg \
 	rsg/agent/flag_right.rsg \
+	rsg/agent/flag_right1.rsg \
+	rsg/agent/flag_right2.rsg \
 	rsg/agent/simspark.rsg \
 	rsg/agent/ball.rsg \
 	rsg/boxspheres/staticsphere.rsg \
