app/monitorspark/soccersim.rb renamed to app/monitorapark/soccersim-monitor.rb so that it won't be overwritten by app/simspark/soccersim.rb in the installation.

--- a/app/monitorspark/Makefile.am
+++ b/app/monitorspark/Makefile.am
@@ -32,7 +32,7 @@ monitorspark_SOURCES = \
 
 dist_pkgdata_DATA = \
 	bindings.rb \
-	soccersim.rb \
+	soccersim-monitor.rb \
 	monitorspark.rb \
 	soccerbindings.rb \
 	VeraMono.ttf
