--- a/lib/kerosin/kerosin-config.in
+++ b/lib/kerosin/kerosin-config.in
@@ -102,6 +102,9 @@ if test "$echo_libtool" = "yes" ; then
  else
   convlib="libkerosin.la"
  fi
+ if test `uname` = "Darwin"; then
+   convlib="$convlib -framework OpenGL -framework IL -framework SDL "
+ fi
  echo @libdir@/rcssserver3d/$convlib
 fi
 
