- added inputwx directory

--- a/plugin/Makefile.am
+++ b/plugin/Makefile.am
@@ -18,7 +18,8 @@ SUBDIRS = \
 	  sparkagent\
 	  sceneeffector\
 	  soccermonitor \
-	  soundsystemfmod
+	  soundsystemfmod \
+	  inputwx
 
 # filesystemrar 
 # soundsystembass
