- move some platform specific details into class Platform

--- a/app/rsgedit/Makefile.am
+++ b/app/rsgedit/Makefile.am
@@ -36,6 +36,7 @@ endif
 rsgedit_SOURCES = \
 	aboutDlg.cpp \
 	inputwx.cpp \
+	platform.cpp \
 	mainframe.cpp \
 	propertylist.cpp \
 	sparkcontextevent.cpp \
