- removed local VeraMono font copy

--- a/app/monitorspark/Makefile.am
+++ b/app/monitorspark/Makefile.am
@@ -34,5 +34,5 @@ dist_pkgdata_DATA = \
 	bindings.rb \
 	soccersim-monitor.rb \
 	monitorspark.rb \
-	soccerbindings.rb \
-	VeraMono.ttf
+	soccerbindings.rb
+	
