- install model files

--- a/app/simspark/Makefile.am
+++ b/app/simspark/Makefile.am
@@ -45,7 +45,7 @@ dist_pkgdata_DATA = \
 
 install-data-local: $(top_builddir)/$(subdir)/rsg/agent/ball.rsg
 	mkdir -p $(DESTDIR)$(pkgdatadir)/
-	for res in rsg fonts scripts;\
+	for res in rsg fonts scripts models;\
 	do \
 	rm -rf $(DESTDIR)$(pkgdatadir)/$$res;\
 	cp -r $(srcdir)/$$res $(DESTDIR)$(pkgdatadir)/;\
