After subtracting what Markus has done, what remains is only removing glut as a required library since it is only used by rcssmonitor3d-lite! :)

--- a/app/fonttest/Makefile.am
+++ b/app/fonttest/Makefile.am
@@ -42,5 +42,6 @@ script/german.scan.rb \
 script/init.rb \
 script/us.scan.rb
 
-data/font/VeraMono.ttf: data/font/VeraMono.ttf.gz
-	gunzip -c data/font/VeraMono.ttf.gz > data/font/VeraMono.ttf
+data/font/VeraMono.ttf: ${srcdir}/data/font/VeraMono.ttf.gz
+	mkdir -p data/font
+	gunzip -c ${srcdir}/data/font/VeraMono.ttf.gz > data/font/VeraMono.ttf
