--- a/lib/oxygen/Makefile.am
+++ b/lib/oxygen/Makefile.am
@@ -2,7 +2,7 @@ if DEBUG
 pkglib_LTLIBRARIES = liboxygen_debug.la
 liboxygen_debug_la_SOURCES = $(sources) $(spades_sources)
 liboxygen_debug_la_CXXFLAGS = -O -g -W -Wall -Woverloaded-virtual -Wno-deprecated 
-liboxygen_debug_la_LIBADD = -lode ${spades_libs}
+liboxygen_debug_la_LIBADD = -lode ${spades_libs} @BOOST_THREADS_LIB@
 liboxygen_debug_la_LDFLAGS = \
 	-version-info @oxygen_version_info@ \
 	${top_builddir}/utility/rcssnet/librcssnet3D.la
@@ -11,7 +11,7 @@ else
 pkglib_LTLIBRARIES = liboxygen.la
 liboxygen_la_SOURCES = $(sources) $(spades_sources)
 liboxygen_la_CXXFLAGS = -O2 -Wno-deprecated 
-liboxygen_la_LIBADD = -lode $(spades_libs) 
+liboxygen_la_LIBADD = -lode $(spades_libs) @BOOST_THREADS_LIB@
 liboxygen_la_LDFLAGS = \
 	-version-info @oxygen_version_info@ \
 	${top_builddir}/utility/rcssnet/librcssnet3D.la
