include user-manual.pdf

--- a/doc/users/Makefile.am
+++ b/doc/users/Makefile.am
@@ -15,5 +15,6 @@ all-local:
 	  echo "***" ; \
 	fi
 
+EXTRA_DIST = user-manual.pdf
 CLEANFILES = user-manual.log user-manual.pdf user-manual.aux user-manual.toc
 endif
